fix chart issue